<resources>
    <string name="app_name">SocialMediaIntegrationApp</string>
    <string name="welcomeMessage">You have successfully logged in</string>
    <string name="enterProfile">Enter Profile</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="login">Login</string>
    <string name="create_new">Click here to register</string>
    <string name="not_register">Already Registered?</string>
    <string name="name">Name</string>
    <string name="save">Save</string>
    <string name="phone_number">Phone Number</string>
    <string name="register">Register</string>
    <string name="name_error">Please enter your name</string>
    <string name="phone_error">Please enter your phone number</string>
    <string name="email_error">Please enter your email address</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="password_error">Please enter a password</string>
    <string name="error_invalid_password">Please enter a minimum password of 6 characters</string>
    <string name="forgotPassword">Forgot Password?</string>
    <string name="web_client_id">419738267674-eegsut1t6bsokteo9ivpo914iq0r9egc.apps.googleusercontent.com</string>
    <string name="facebook_app_id">1148855175530798</string>
    <string name="fb_login_protocol_scheme">fb[1148855175530798]</string>
</resources>